--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <style>
+            body{background-color:burlywood}
+            table {
+                text-align: center;
+                display: table;
+                box-sizing: border-box;
+                text-indent: initial;
+                border-spacing: 2px;
+                border-color: black; 
+            }
+            table-striped{}
+            tr:nth-child(even) {
+                background-color: #9AE1EF;
+            }
+        </style>
         <title>Mission to Mars</title>
         <link
         rel="stylesheet"
@@ -20,7 +35,8 @@
             <div class="jumbotron text-center">
                 <h1>Mission to Mars</h1>
                 <!-- Add a button to activate scraping script -->
-                <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+                <p><a class="btn btn-success btn-lg" href="/scrape"
+                    role="button">Scrape New Data</a></p> 
             </div>
             
             <!-- Add section for Mars News -->
@@ -28,7 +44,7 @@
                 <div class="col-md-12">
                     <div class="media">
                         <div class="media-body">
-                        <h2>Latest Mars News</h2>
+                        <h2 style="color:blue"><u>Latest Mars News</u></h2>
                         <h4 class="media-heading">{{ mars.news_title }}</h4>
                         <p>{{ mars.news_paragraph }}</p>
                         </div>
@@ -38,22 +54,37 @@
 
             <!-- Section for Featured Image and Facts table -->
             <div class="row" id="mars-featured-image">
-                <div class="col-md-8">
-                    <h2>Featured Mars Image</h2>
+                <div class="col-xs-6">
+                    <h3 style="text-align: center; color:blue">Featured Mars Image</h3>
                     <img
                         src="{{mars.featured_image }}"
-                        class="img-responsive"
+                        class="img-thumbnail"
                         alt="Responsive image"
                     />
                 </div>
-                <div class="col-md-4">
-
+                <div class="col-xs-6">
                     <!-- Mars Facts -->
                     <div class="table table-striped" id="mars-facts">
-                        <h4> Mars Facts </h4>
+                        <h4 style="text-align: center; color:blue"> Mars Facts </h4>
                         {{ mars.facts | safe }}
                     </div>
                 </div>
+            </div>
+            <!-- Section for Featured hemisphere images -->
+            <div class="row" id="hemisphere_image_urls">
+                <div class="col-md-12">
+                    <h2 style="text-align: center; color:blue">Hemisphere Images</h2>
+                </div style="border:5px solid black">
+                {%for i in range(0, hemisphere_length)%}
+                <div class="col-md-3">
+                    <h5 style="text-align: center">{{mars.hemisphere_titles[i]}}</h5>
+                    <img
+                        src="{{mars.hemisphere_images[i]}}"
+                        class="img-thumbnail"
+                        alt="Responsive image"
+                    />
+                </div>
+                {%endfor%}
             </div>
         </div>
     </body>
